--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,4 +1,5 @@
 {
-    "Temperature": "Temperatur",
-    "Conditions": "Bedingungen"
+	"total guests": "Anzahl Gäste",
+	"Temperature": "Temperatur",
+	"Conditions": "Bedingungen"
 }
