--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,4 +1,5 @@
 {
-    "Temperature": "Temperature",
-    "Conditions": "Conditions"
+	"total guests": "total guests",
+	"Temperature": "Temperature",
+	"Conditions": "Conditions"
 }
